# linuxadmin

./: .gitignore  README.md  course.json  course.yml  pyproject.toml
.github/workflows/: main.yml
02/: index.1.html
bin-func-alias/: index.html
containers/: index.html
create/: index.html
echo/: index.html
env-var/: index.html
fhs/: index.html
filedir/: index.html
fork-teaser/: index.html
installation/: index.html
lessons/carpentry-unix/bash-intro/: index.md  info.yml
lessons/carpentry-unix/create/: index.md  info.yml
lessons/carpentry-unix/filedir/: index.md  info.yml
lessons/carpentry-unix/loop-nelle/: index.md  info.yml
lessons/carpentry-unix/pipefilter/: index.md  info.yml
lessons/carpentry-unix/pipefilter-nelle/: index.md  info.yml
lessons/hw/bash-1/: index.md  info.yml
lessons/hw/bash-2/: index.md  info.yml
lessons/hw/bash-functions/: index.md  info.yml
lessons/hw/dnf-exercises/: index.md  info.yml
lessons/hw/httpd/: index.md
lessons/hw/link/: index.md
lessons/hw/own-cmd/: index.md
lessons/hw/sudo/: index.md  info.yml
lessons/linuxadmin/and-or-background/: index.md  info.yml
lessons/linuxadmin/ansible/: index.md  info.yml
lessons/linuxadmin/bash-exit-code/: index.md  info.yml
lessons/linuxadmin/bash-intro/: index.md
lessons/linuxadmin/bash-shortcuts/: index.md  info.yml
lessons/linuxadmin/bin-func-alias/: index.md  info.yml
lessons/linuxadmin/containers/: index.md  info.yml
lessons/linuxadmin/echo/: index.md  info.yml
links/: index.html
own-cmd/: index.html
package-management/: index.html
(+106 files in other folders)
